[project]
name = "pumpy3"
version = "0.1.0"
description = ""
authors = [
    {name = "WetenSchaap",email = "36634689+WetenSchaap@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyserial (>=3.5,<4.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pykernel = "^0.1.6"
matplotlib = "^3.10.3"
numpy = "^2.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
